--- a/Source/Makefile
+++ b/Source/Makefile
@@ -37,6 +37,44 @@ BOOK_FILES += ../docs/Source/public/review/naked_as_from_the_earth_we_came_hatfi
 BOOK_FILES += ../docs/Source/public/review/naked_as_from_the_earth_we_came_winchester_old_bumby/naked_as_from_the_earth_we_came_winchester_old_bumby_sheet_music.pdf
 BOOK_FILES += ../docs/Source/private/review/let_all_mortal_flesh_keep_silence_bumby/let_all_mortal_flesh_keep_silence_bumby_sheet_music.pdf
 BOOK_FILES += ../docs/Source/private/review/weeping_garden_bumby/weeping_garden_bumby_sheet_music.pdf
+BOOK_FILES += ../docs/Source/private/review/highest_hope_bumby/highest_hope_bumby_sheet_music.pdf
+
+SLIDE_FILES := ../docs/Source/public/review/my_shepherd_will_supply_my_need_bumby/my_shepherd_will_supply_my_need_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/teach_me_lord_to_wait_bumby/teach_me_lord_to_wait_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/in_christ_alone_bumby/in_christ_alone_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/public/review/abide_with_me_bumby/abide_with_me_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/how_beautiful_bumby/how_beautiful_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/public/review/christ_the_lord_is_risen_today_mendelssohn_bumby/christ_the_lord_is_risen_today_mendelssohn_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/public/review/hark_I_hear_the_harps_eternal_bumby/hark_I_hear_the_harps_eternal_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/just_as_I_am_I_come_broken_bumby/just_as_I_am_I_come_broken_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/magnificat_bumby/magnificat_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/just_for_today_bumby/just_for_today_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/public/review/ah_holy_jesus_bumby/ah_holy_jesus_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/be_thou_my_vision_bumby/be_thou_my_vision_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/listen_to_our_hearts_bumby/listen_to_our_hearts_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/days_of_elijah_bumby/days_of_elijah_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/the_mountain_song_bumby/the_mountain_song_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/lord_reign_in_me_bumby/lord_reign_in_me_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/the_rock_of_my_heart_bumby/the_rock_of_my_heart_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/thomas_song_bumby/thomas_song_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/the_cost_bumby/the_cost_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/god_of_the_living_in_whose_eyes_bumby/god_of_the_living_in_whose_eyes_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/blessed_be_your_name_bumby/blessed_be_your_name_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/immanuel_god_with_us_bumby/immanuel_god_with_us_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/morning_has_broken_bumby/morning_has_broken_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/my_god_I_thank_you_who_have_made_bumby/my_god_I_thank_you_who_have_made_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/public/review/bright_canaan_bumby/bright_canaan_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/what_the_lord_has_done_in_me_bumby/what_the_lord_has_done_in_me_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/public/review/o_sacred_head_bumby/o_sacred_head_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/public/review/all_glory_laud_and_honor_bumby_a/all_glory_laud_and_honor_bumby_a_slides.pdf
+SLIDE_FILES += ../docs/Source/public/review/all_glory_laud_and_honor_bumby_b/all_glory_laud_and_honor_bumby_b_slides.pdf
+SLIDE_FILES += ../docs/Source/public/review/immortal_invisible_god_only_wise_bumby/immortal_invisible_god_only_wise_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/public/review/what_wondrous_love_is_this_bumby/what_wondrous_love_is_this_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/public/review/naked_as_from_the_earth_we_came_hatfield_bumby/naked_as_from_the_earth_we_came_hatfield_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/public/review/naked_as_from_the_earth_we_came_winchester_old_bumby/naked_as_from_the_earth_we_came_winchester_old_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/let_all_mortal_flesh_keep_silence_bumby/let_all_mortal_flesh_keep_silence_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/weeping_garden_bumby/weeping_garden_bumby_slides.pdf
+SLIDE_FILES += ../docs/Source/private/review/highest_hope_bumby/highest_hope_bumby_slides.pdf
 
 $(TOPTARGETS): $(SUBDIRS)
 $(SUBDIRS):
@@ -46,5 +84,10 @@ $(SUBDIRS):
 
 book: ../Published/hymnal.pdf
 
+slides: ../Published/slides.pdf
+
 ../Published/hymnal.pdf: $(BOOK_FILES)
 	pdftk $(BOOK_FILES) cat output $@ compress
+
+../Published/slides.pdf: $(SLIDE_FILES)
+	pdftk $(SLIDE_FILES) cat output $@ compress
