--- a/Source/highest_hope_bumby/Makefile
+++ b/Source/highest_hope_bumby/Makefile
@@ -5,7 +5,7 @@
 #
 # The following two variables are probably all that needs to be customized for any hymn
 #
-PROD_BASE_NAME = days_of_elijah_bumby
+PROD_BASE_NAME = highest_hope_bumby
 STATUS = review
 ACCESS = private
 
